iml-services/iml-devices/src/snapshots/breadth_first_iterator__parent_and_double_parent_produce_three_items.snap
---
source: iml-services/iml-devices/src/db.rs
expression: result
---
[
    DeviceId(
        "b1",
    ),
    DeviceId(
        "a1",
    ),
    DeviceId(
        "a2",
    ),
]
