iml-services/iml-devices/src/snapshots/breadth_first_iterator__single_parent_produces_one_item.snap
---
source: iml-services/iml-devices/src/db.rs
expression: result
---
[
    DeviceId(
        "a",
    ),
]
