iml-services/iml-devices/src/snapshots/breadth_first_iterator__three_parents_produce_three_items.snap
---
source: iml-services/iml-devices/src/breadth_first_iterator.rs
expression: result
---
[
    DeviceId(
        "c",
    ),
    DeviceId(
        "b",
    ),
    DeviceId(
        "a",
    ),
]
