iml-services/iml-devices/src/snapshots/breadth_first_iterator__triple_parent_and_double_parent_produce_five_items.snap
---
source: iml-services/iml-devices/src/db.rs
expression: result
---
[
    DeviceId(
        "b1",
    ),
    DeviceId(
        "b2",
    ),
    DeviceId(
        "b3",
    ),
    DeviceId(
        "a1",
    ),
    DeviceId(
        "a2",
    ),
]
