iml-services/iml-devices/src/snapshots/breadth_first_iterator__two_parents_produce_two_items.snap
---
source: iml-services/iml-devices/src/db.rs
expression: result
---
[
    DeviceId(
        "b",
    ),
    DeviceId(
        "a",
    ),
]
